--- a/readme
+++ b/readme
@@ -17,5 +17,5 @@ python3 server.py
 http://127.0.0.1:5000/getProducts
 
 Open in safari:
-file:///Users/admin/Desktop/Grocery%20Store/ui/manage-product.html
+file:///Users/admin/Desktop/Grocery%20Store/ui/index.html
 
